<resources>
    <string name="app_name">TestTaskAeon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">Sign in</string>
    <string name="exit">Exit</string>
    <string name="id">Id:</string>
    <string name="title">Title:</string>
    <string name="amount">Amount:</string>
    <string name="created">Created:</string>
    <string name="list_payments">Список платежей</string>
</resources>